# my_os

./: readme.txt
asm_bootloader/x86_16-bootloader/: .gdb_history  peda-session-1.txt  peda-session-kernel.txt  peda-session-unknown.txt
asm_bootloader/x86_16-bootloader/boot/: bootloader  bootloader.asm~  bootloader.elf
asm_bootloader/x86_16-bootloader/kernel/: kernel  sample  sample.asm
asm_bootloader/x86_16-bootloader/kernel/C_kernel/: main.c  main.c~
my_os/: .gdb_history
os/: Cargo.toml  readme.txt
os/src/: interrupts.rs  main.rs  memory.rs  vga_buffer.rs
os/src/allocator/: bump.rs
rust_OS/: Cargo.toml
src/: allocator.rs  gdt.rs  lib.rs  main.rs
src/allocator/: fixed_size_block.rs  linked_list.rs
src/task/: mod.rs  simple_executor.rs
x86_16-bootloader/: bootloader  bootloader.asm  disk.img
